--- a/面试准备01.md
+++ b/面试准备01.md
@@ -3,7 +3,12 @@ layout: post
 title: 面试准备01
 date: 2021-04-18 11:12:06
 tags:
+hide: true
 ---
+面试算法题。
+<!--more-->
+
+
 # 算法题：两个队列模拟栈
 
 队列的特点是先进先出，操作者所能获得的永远是队列最里面的元素。  
