--- a/前端01.md
+++ b/前端01.md
@@ -319,22 +319,76 @@ span，跨度、跨距，**一行可以多个span**。
 
 ### 表单控件（表单元素）
 
-- `input`输入表单元素，是一个单标签
+#### `input`输入表单元素
+
+- type属性是input元素的必备属性
 
 ```html
 <input type="类型">
 ```
 
-| 属性值   | 描述                                   |
-| -------- | -------------------------------------- |
-| button   | 定义可点击按钮（通过JS启动脚本）       |
-| checkbox | 定义复选框，实现多选多                 |
-| file     | 定义输入字段和“浏览”按钮，供文件上传   |
-| hidden   | 定义隐藏的输入字段                     |
-| image    | 定义图像形式的提交按钮                 |
-| password | 定义密码字段，盖子段的字符被掩码       |
-| radio    | 定义单选按钮，实现多选一               |
-| reset    | 定义重置按钮，用于清除表单中的所有元素 |
-| submit   | 定义提交按钮，将表单数据发送到服务器   |
-| text     | 定义单行输入字段                       |
+input的type可以设定的属性值：
+
+| 属性值   | 描述                                                     |
+| -------- | -------------------------------------------------------- |
+| button   | 定义可点击按钮（通过JS启动脚本）                         |
+| checkbox | 定义复选框，实现多选多（多个标签要有相同的`name`属性）   |
+| file     | 定义输入字段和“浏览”按钮，供文件上传                     |
+| hidden   | 定义隐藏的输入字段                                       |
+| image    | 定义图像形式的提交按钮                                   |
+| password | 定义密码字段，盖子段的字符被掩码                         |
+| radio    | 定义单选按钮，实现多选一（多个标签要有相同的`name`属性） |
+| reset    | 定义重置按钮，用于清除表单中的所有元素                   |
+| submit   | 定义提交按钮，将表单数据发送到服务器                     |
+| text     | 定义单行输入字段                                         |
+
+- input的常用其他类型属性：
+
+| 属性      | 属性值  | 描述                                                         |
+| --------- | ------- | ------------------------------------------------------------ |
+| name      | 自定义  | 定义input元素的名称                                          |
+| value     | 自定义  | 规定input元素的值                                            |
+| checked   | checked | 为checkbox和radio属性设置，规定此input元素首次加载时应当被选中 |
+| maxlength | 正整数  | 规定输入字段中的字符最大长度                                 |
+
+#### select下拉表单元素
+
+```html
+籍贯：
+<form>  
+<select>
+  籍贯：
+  <option>1</option>
+    <option selected="selected">2</option>
+    <option>3</option>
+    <option>4</option>
+</select>  
+</form>
+```
+
+<img src="前端01/image-20210910120749272.png" style="zoom:50%;" />
+
+#### textarea表单元素
+
+“大号文本框”。
+
+```html
+<form>
+  留言板：
+  <textarea rows = "2" cols="2">默认信息</textarea>
+</form>
+```
+
+<img src="前端01/image-20210910121102798.png" style="zoom:50%;" />
+
+## label标签
+
+- `<label>`标签为input元素定义标注
+- `<label>`标签用于绑定一个表单元素，当点击其内部的文本时，浏览器自动将焦点赚到其对应表单元素上。
+
+```html
+<label for="绑定的表单元素id">label显示文字</label><input type="checkbox" id="绑定的表单元素id">
+```
+
+![label](前端01/label.gif)
 
